Fixes for index

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1eD-gRHmMaJ6m3V_Se1UKbPZWC2PFQ67UI_mZuNt_vCY&font=Default&lang=en&initial_zoom=2&height=650"
     width="100%" height="650" webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder="0"></iframe>
 
-  <div class='tableauPlaceholder' id='viz1683438327800' style='position: relative; max-height: 400px;'><noscript><a
+  <div class='tableauPlaceholder' id='viz1683438327800' style='position: relative; max-height: 475px;'><noscript><a
         href='#'><img alt='Dashboard 1 '
           src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ri&#47;RichmondPopulationOverTime&#47;Dashboard1&#47;1_rss.png'
           style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -476,7 +476,7 @@
       <param name='filter' value='publish=yes' />
     </object></div>
   <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1683438327800'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = '470px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = '470px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '470px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    type='text/javascript'>                    var divElement = document.getElementById('viz1683438327800'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = '475px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = '475px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '475px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
   <!-- Issues in Housing Continue Today -->
   <div class="center_section" style="height: fit-content">
@@ -573,9 +573,10 @@
       </p>
       <p>
         Below, we’ve summarized these interventions across three themes: <span class="emphasis_p">Production,
-          Preservation, and Protection.</span> Click on the nodes to learn more about different solutions.
-        We need movement across all of these areas and more; as we see earlier, some of
+          Preservation, and Protection.</span> We need movement across all of these areas and more; as we see earlier,
+        some of
         these solutions can seem to be in direct conflict.</p>
+      <p><strong>Click on the circles</strong> to learn more about different solutions. </p>
       </p>
     </div>
   </div>
@@ -679,8 +680,8 @@
   <div class="blank"></div>
   <div class="footer">
     <p style="text-align: center;">
-      <a href="index.html">Narrative</a> | <a href="about.html">About</a> | <a href="sources.html">Sources &
-        Methods</a>
+      <a href="about.html">About</a> | <a href="sources.html">Sources &
+        Methods</a> | <a href="#introduction">Back to Top</a>
     </p>
     Visualizing the Housing Crisis is a capstone project for Masters of Information Management at the School
     of Information, University of California, Berkeley.
