Add changes to Index

--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
           <p style="width: 100%; text-align: left">
             This map shows neighborhoods with the highest levels of recorded
             evictions:
-            <span style="color: var(--blue); font-weight: bold">the Iron Triangle</span>,
-            <span style="font-weight: bold">Panhandle, and Hilltop.</span>
+            <span class="emphasis_red">the Iron Triangle,
+              Panhandle, and Hilltop.</span>
             These neighborhoods are predominantly Black and Hispanic. The
             current housing landscape places the vulnerable - who are often
             racial minorities - in precarious situations rather than support
@@ -564,7 +564,7 @@
   </div>
 
   <!-- What's the fix? -->
-  <div class="section_wide" id="solutions_menu">
+  <div class="section_wide" id="solutions_menu" style="margin-bottom: -75px !important;">
     <div class="content_wide">
       <h2>What's the Fix?</h2>
       <p>
@@ -576,7 +576,8 @@
           Preservation, and Protection.</span> We need movement across all of these areas and more; as we see earlier,
         some of
         these solutions can seem to be in direct conflict.</p>
-      <p><strong>Click on the circles</strong> to learn more about different solutions. </p>
+      <p><span class="emphasis_red">Click on the circles</span> in the chart below to learn more about different
+        solutions. </p>
       </p>
     </div>
   </div>
