--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
     src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1eD-gRHmMaJ6m3V_Se1UKbPZWC2PFQ67UI_mZuNt_vCY&font=Default&lang=en&initial_zoom=2&height=650"
     width="100%" height="650" webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder="0"></iframe>
 
-  <div class='tableauPlaceholder' id='viz1683438327800' style='position: relative; max-height: 475px;'><noscript><a
-        href='#'><img alt='Dashboard 1 '
+  <div class='tableauPlaceholder' id='viz1683485715948' style='position: relative'><noscript><a href='#'><img
+          alt='Dashboard 1 '
           src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ri&#47;RichmondPopulationOverTime&#47;Dashboard1&#47;1_rss.png'
           style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
       <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
@@ -476,7 +476,7 @@
       <param name='filter' value='publish=yes' />
     </object></div>
   <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1683438327800'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.height = '475px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = '475px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '475px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    type='text/javascript'>                    var divElement = document.getElementById('viz1683485715948'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.maxWidth = '4000px'; vizElement.style.height = '475px'; vizElement.style.maxHeight = '475px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.maxWidth = '4000px'; vizElement.style.height = '475px'; vizElement.style.maxHeight = '475px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '475px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
   <!-- Issues in Housing Continue Today -->
   <div class="center_section" style="height: fit-content">
@@ -581,10 +581,8 @@
       </p>
     </div>
   </div>
-
-
-  <div class='tableauPlaceholder' id='viz1683429546023' style='position: relative; padding-left: 5vh;'><noscript><a
-        href='#'><img alt='Dashboard 1 '
+  <div class='tableauPlaceholder' id='viz1683484503623' style='position: relative'><noscript><a href='#'><img
+          alt='Dashboard 1 '
           src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1_rss.png'
           style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
       <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
@@ -604,8 +602,7 @@
       <param name='filter' value='publish=yes' />
     </object></div>
   <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1683429546023'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1300px'; vizElement.style.height = '627px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1300px'; vizElement.style.height = '627px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-
+    type='text/javascript'>                    var divElement = document.getElementById('viz1683484503623'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.maxWidth = '4000px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; vizElement.style.maxHeight = '627px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.maxWidth = '4000px'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; vizElement.style.maxHeight = '627px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '727px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
   <div class="blank_sm"></div>
 
@@ -673,9 +670,7 @@
         <a href="https://www.richmondland.org/get-involved">RichmondLand</a>
       </p>
       <p>
-        <a href="https://richmondnhs.org/"
-          >Richmond Neighborhood Housing Services</a
-        >
+        <a href="https://richmondnhs.org/">Richmond Neighborhood Housing Services</a>
       </p>
       <p><a href="https://baylegal.org/">Bay Area Legal Aid</a></p>
 
@@ -701,15 +696,11 @@
       </p>
       <p>
         Take the
-        <a href="https://eastbayyesterday.com/"
-          >East Bay Yesterday walking tour</a
-        >.
+        <a href="https://eastbayyesterday.com/">East Bay Yesterday walking tour</a>.
       </p>
       <p>
         Visit the
-        <a href="https://richmondmuseum.org/"
-          >Richmond Museum of History & Culture</a
-        >.
+        <a href="https://richmondmuseum.org/">Richmond Museum of History & Culture</a>.
       </p>
       <a href="#popup5" onclick="hide('popup5')">Close</a>
     </div>
@@ -720,19 +711,11 @@
       <div class="square sq1">
         <div id="ns_image_box">
           <div>
-            <object
-              type="image/svg+xml"
-              data="./staticFiles/images/next_steps/decor1.svg"
-              class="decor"
-              id="d1"
-            ></object>
+            <object type="image/svg+xml" data="./staticFiles/images/next_steps/decor1.svg" class="decor"
+              id="d1"></object>
             <div class="window" id="w1">
-              <object
-                type="image/svg+xml"
-                data="./staticFiles/images/next_steps/curtain.svg"
-                class="curtain"
-                id="c1"
-              ></object>
+              <object type="image/svg+xml" data="./staticFiles/images/next_steps/curtain.svg" class="curtain"
+                id="c1"></object>
               <button class="button" href="#" onclick="show('popup1')">
                 Share this work
               </button>
@@ -740,19 +723,11 @@
           </div>
 
           <div>
-            <object
-              type="image/svg+xml"
-              data="./staticFiles/images/next_steps/decor2.svg"
-              class="decor"
-              id="d2"
-            ></object>
+            <object type="image/svg+xml" data="./staticFiles/images/next_steps/decor2.svg" class="decor"
+              id="d2"></object>
             <div class="window" id="w2">
-              <object
-                type="image/svg+xml"
-                data="./staticFiles/images/next_steps/curtain.svg"
-                class="curtain"
-                id="c2"
-              ></object>
+              <object type="image/svg+xml" data="./staticFiles/images/next_steps/curtain.svg" class="curtain"
+                id="c2"></object>
               <button class="button" href="#" onclick="show('popup2')">
                 Keep learning about housing
               </button>
@@ -760,19 +735,11 @@
           </div>
 
           <div>
-            <object
-              type="image/svg+xml"
-              data="./staticFiles/images/next_steps/decor3.svg"
-              class="decor"
-              id="d3"
-            ></object>
+            <object type="image/svg+xml" data="./staticFiles/images/next_steps/decor3.svg" class="decor"
+              id="d3"></object>
             <div class="window" id="w3">
-              <object
-                type="image/svg+xml"
-                data="./staticFiles/images/next_steps/curtain.svg"
-                class="curtain"
-                id="c3"
-              ></object>
+              <object type="image/svg+xml" data="./staticFiles/images/next_steps/curtain.svg" class="curtain"
+                id="c3"></object>
               <button class="button" href="#" onclick="show('popup3')">
                 Connect with a nonprofit
               </button>
@@ -780,19 +747,11 @@
           </div>
 
           <div>
-            <object
-              type="image/svg+xml"
-              data="./staticFiles/images/next_steps/decor4.svg"
-              class="decor"
-              id="d4"
-            ></object>
+            <object type="image/svg+xml" data="./staticFiles/images/next_steps/decor4.svg" class="decor"
+              id="d4"></object>
             <div class="window" id="w4">
-              <object
-                type="image/svg+xml"
-                data="./staticFiles/images/next_steps/curtain.svg"
-                class="curtain"
-                id="c4"
-              ></object>
+              <object type="image/svg+xml" data="./staticFiles/images/next_steps/curtain.svg" class="curtain"
+                id="c4"></object>
               <button class="button" href="#" onclick="show('popup4')">
                 Be politically involved
               </button>
@@ -800,28 +759,17 @@
           </div>
 
           <div>
-            <object
-              type="image/svg+xml"
-              data="./staticFiles/images/next_steps/decor4.svg"
-              class="decor"
-              id="d5"
-            ></object>
+            <object type="image/svg+xml" data="./staticFiles/images/next_steps/decor4.svg" class="decor"
+              id="d5"></object>
             <div class="window" id="w5">
-              <object
-                type="image/svg+xml"
-                data="./staticFiles/images/next_steps/curtain.svg"
-                class="curtain"
-                id="c5"
-              ></object>
+              <object type="image/svg+xml" data="./staticFiles/images/next_steps/curtain.svg" class="curtain"
+                id="c5"></object>
               <button class="button" href="#" onclick="show('popup5')">
                 Get to know Richmond
               </button>
             </div>
           </div>
-          <img
-            src=".\staticFiles\images\next_steps\background-13.svg"
-            id="background"
-          />
+          <img src=".\staticFiles\images\next_steps\background-13.svg" id="background" />
         </div>
       </div>
     </section>
