--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
     src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1eD-gRHmMaJ6m3V_Se1UKbPZWC2PFQ67UI_mZuNt_vCY&font=Default&lang=en&initial_zoom=2&height=650"
     width="100%" height="650" webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder="0"></iframe>
 
-  <div class='tableauPlaceholder' id='viz1683485715948' style='position: relative'><noscript><a href='#'><img
-          alt='Dashboard 1 '
+  <div class='tableauPlaceholder' id='viz1683485715948' style='position: relative; max-height: 400px;'>
+    <noscript><a href='#'><img alt='Dashboard 1 '
           src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ri&#47;RichmondPopulationOverTime&#47;Dashboard1&#47;1_rss.png'
           style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
       <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
@@ -474,9 +474,10 @@
       <param name='display_count' value='yes' />
       <param name='language' value='en-US' />
       <param name='filter' value='publish=yes' />
-    </object></div>
+    </object>
+  </div>
   <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1683485715948'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.maxWidth = '4000px'; vizElement.style.height = '475px'; vizElement.style.maxHeight = '475px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.maxWidth = '4000px'; vizElement.style.height = '475px'; vizElement.style.maxHeight = '475px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '475px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    type='text/javascript'>                    var divElement = document.getElementById('viz1683485715948'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '100%'; vizElement.style.maxWidth = '4000px'; vizElement.style.height = '400px'; vizElement.style.maxHeight = '400'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.maxWidth = '4000px'; vizElement.style.height = '400px'; vizElement.style.maxHeight = '400px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '400px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
   <!-- Issues in Housing Continue Today -->
   <div class="center_section" style="height: fit-content">
