--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
       <div class="section_narrow" style="padding: 0; column-gap: 2vw">
         <div class="content_narrow">
-          <img src="staticFiles\images\eviction_map\eviction rate iso.svg" style="width: 98%" />
+          <img src="staticFiles\images\eviction_map\eviction_rate_iso.svg" style="width: 98%" />
         </div>
         <div class="image_box_med" style="text-align: left">
           <div class="tableauPlaceholder" id="viz1683250275111" style="position: relative">
@@ -582,8 +582,8 @@
       </p>
     </div>
   </div>
-  <div class='tableauPlaceholder' id='viz1683484503623' style='position: relative'><noscript><a href='#'><img
-          alt='Dashboard 1 '
+  <div class='tableauPlaceholder' id='viz1683484503623' style='position: relative; max-height: 600px;'><noscript><a
+        href='#'><img alt='Dashboard 1 '
           src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1_rss.png'
           style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
       <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
