--- a/index.html
+++ b/index.html
@@ -610,16 +610,18 @@
           src="staticFiles\images\issues_today\local_gov.svg"
           style="width: 100%"
         />
-        <p>
-          The trend that Contra Costa County exhibits here of disproportionally
-          under-developing housing planned for very low and low income
-          households mirrors the rest of the Bay Area. The Association of Bay
-          Area Governments (ABAG), sets goals for housing developments based on
-          population growth and housing needs. Between 2007 and 2014, the Great
-          Recession affected the ability to finance affordable housing, and was
-          further impacted by an overall decrease in funding from state and
-          federal sources.
-        </p>
+        <div style="position: relative; left: 10%">
+          <p style="width: 80%; line-height: 1.1; font-size: 14px">
+            The trend that Contra Costa County exhibits here of
+            disproportionally under-developing housing planned for very low and
+            low income households mirrors the rest of the Bay Area. The
+            Association of Bay Area Governments (ABAG), sets goals for housing
+            developments based on population growth and housing needs. Between
+            2007 and 2014, the Great Recession affected the ability to finance
+            affordable housing, and was further impacted by an overall decrease
+            in funding from state and federal sources.
+          </p>
+        </div>
 
         <h3>Community</h3>
         <p>
