Fix height of tableau

--- a/index.html
+++ b/index.html
@@ -521,22 +521,19 @@
         developing housing for lower-income households.
       </p>
 
-        <img
-          src="staticFiles\images\issues_today\local_gov.svg"
-          style="width: 100%"
-        />
-        <div style="position: relative; left: 10%">
-          <p style="width: 80%; line-height: 1.1; font-size: 14px">
-            The trend that Contra Costa County exhibits here of
-            disproportionally under-developing housing planned for very low and
-            low income households mirrors the rest of the Bay Area. The
-            Association of Bay Area Governments (ABAG), sets goals for housing
-            developments based on population growth and housing needs. Between
-            2007 and 2014, the Great Recession affected the ability to finance
-            affordable housing, and was further impacted by an overall decrease
-            in funding from state and federal sources.
-          </p>
-        </div>
+      <img src="staticFiles\images\issues_today\local_gov.svg" style="width: 100%" />
+      <div style="position: relative; left: 10%">
+        <p style="width: 80%; line-height: 1.1; font-size: 14px">
+          The trend that Contra Costa County exhibits here of
+          disproportionally under-developing housing planned for very low and
+          low income households mirrors the rest of the Bay Area. The
+          Association of Bay Area Governments (ABAG), sets goals for housing
+          developments based on population growth and housing needs. Between
+          2007 and 2014, the Great Recession affected the ability to finance
+          affordable housing, and was further impacted by an overall decrease
+          in funding from state and federal sources.
+        </p>
+      </div>
 
       <h3>Community</h3>
       <p>
@@ -608,7 +605,7 @@
       </p>
     </div>
   </div>
-  <div class="tableauPlaceholder" id="viz1683484503623" style="position: relative">
+  <div class="tableauPlaceholder" id="viz1683484503623" style="position: relative; max-height:600px;">
     <noscript><a href="#"><img alt="Dashboard 1 "
           src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;so&#47;solutions-menu&#47;Dashboard1&#47;1_rss.png"
           style="border: none" /></a></noscript><object class="tableauViz" style="display: none">
