dev- caption final

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
           src="staticFiles\images\issues_today\local_gov.svg"
           style="width: 100%"
         />
-        <div style="position: relative; left: 10%">
+        <div style="display:flex; justify-content:center;">
           <p style="width: 80%; line-height: 1.1; font-size: 14px;color:var(--gray-dark)">
             The trend that Contra Costa County exhibits here of
             disproportionally under-developing housing planned for very low and
