Add smol changes

--- a/index.html
+++ b/index.html
@@ -246,10 +246,9 @@
         vizElement.parentNode.insertBefore(scriptElement, vizElement);
       </script>
       <p>
-        In Richmond, white residents own homes at more than 2x Black residents
-        and 1.3x Hispanic residents. For renting, Hispanic residents rent
-        almost 2x more and Black residents rent around 1.5x more than White
-        residents.
+        In Richmond, white residents own homes at more than <span class="emphasis_red">2x</span> the rate of Black
+        residents and <span class="emphasis_red">1.3x</span> that of Hispanic residents. Meanwhile, Hispanic residents
+        rent almost 2x more and Black residents rent around 1.5x more than White residents.
       </p>
       <div class="blank_sm"></div>
 
