finalize how did we get here

--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
       <img id="redline" src="staticFiles\images\redlining\redline.svg" />
     </div>
     <!-- Redlining -->
+    <div class="blank_sm"></div>
     <div class="section_wide" id="historys">
       <div class="content_wide">
         <h2>How did we get here?</h2>
@@ -443,8 +444,8 @@
             ></span
           >
         </p>
+        <div class="blank_sm"></div>
       </div>
-      <div class="blank_sm"></div>
 
       <div class="content_med">
         <h3>Explicit Racism in Housing</h3>
@@ -462,7 +463,7 @@
         </p>
       </div>
     </div>
-    <div class="section_wide">
+    <div class="section_wide" style="margin-left:200px;">
       <div class="content_med">
         <h3>Implicit Racism in Housing</h3>
         <img
@@ -519,6 +520,8 @@
       frameborder="0"
     ></iframe>
 
+    <div class="blank_sm"></div>
+    
     <div
       class="tableauPlaceholder"
       id="viz1683485715948"
